--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.4</version> <!--3.1.5-->
+		<version>2.7.18</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.egg</groupId>
@@ -20,15 +20,23 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.2.4</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.30</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-			<version>3.2.0</version>
 		</dependency>
 
 		<dependency> 
@@ -103,23 +111,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!-- other plugins -->
-        	<plugin>
-        	    <groupId>com.google.cloud.tools</groupId>
-        	    <artifactId>jib-maven-plugin</artifactId>
-        	    <version>3.2.1</version>
-        	    <configuration>
-        	        <from>
-        	            <image>openjdk:17-alpine</image>
-        	        </from>
-        	        <container>
-        	            <ports>
-        	                <port>8080</port>
-        	            </ports>
-        	            <format>OCI</format>
-        	        </container>
-        	    </configuration>
-        	</plugin>
+
 		</plugins>
 	</build>
 
