--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,6 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.30</version>
-		</dependency>
-
 		<dependency> 
     		<groupId>org.springframework.boot</groupId> 
     		<artifactId>spring-boot-starter-validation</artifactId> 
@@ -72,13 +66,13 @@
 			<scope>test</scope>
 		</dependency>
 
-        <!-- Conector MySQL -->
+        <!-- Conector MySQL 
         <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>8.0.33</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
 
 		<!-- thymeleaf -->
 		<dependency>
